syntax = "proto3";
package oraichain.orai.provider;
//import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
option go_package = "github.com/oraichain/orai/x/provider/types";
//import "x/provider/types/types_ds.proto";

// MsgCreateAIDataSource submit data source metadata onto Oraichain
message MsgCreateAIDataSource {
  string name = 1;
  string description = 2;
  string contract = 3;
  // Owner is the address who is allowed to make further changes to the data source.
  bytes owner = 4 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string fees = 5 [(gogoproto.moretags) = "json:\"transaction_fee\""];
}
// MsgCreateAIDataSourceRes returns store result data.
message MsgCreateAIDataSourceRes{
  string name = 1;
  string description = 2;
  string contract = 3;
  // Owner is the address who is allowed to make further changes to the data source.
  bytes owner = 4 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string fees = 5 [(gogoproto.moretags) = "json:\"transaction_fee\""];
}

// MsgEditAIDataSource edit data source metadata onto Oraichain
message MsgEditAIDataSource {
  string old_name = 1;
  string new_name = 2;
  string description = 3;
  string contract = 4;
  // Owner is the address who is allowed to make further changes to the data source.
  bytes owner = 5 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string fees = 6 [(gogoproto.moretags) = "json:\"transaction_fee\""];
}
// MsgEditAIDataSourceRes returns edit result data.
message MsgEditAIDataSourceRes{
  string name = 1;
  string description = 2;
  string contract = 3;
  // Owner is the address who is allowed to make further changes to the data source.
  bytes owner = 4 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string fees = 5 [(gogoproto.moretags) = "json:\"transaction_fee\""];
}
