syntax = "proto3";
package oraichain.orai.provider;
//import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
option go_package = "github.com/oraichain/orai/x/provider/types";
//import "x/provider/types/types_ds.proto";

// MsgCreateOracleScript submit oracle script metadata onto Oraichain
message MsgCreateOracleScript {
  string name = 1;
  string description = 2;
  string contract = 3;
  // Owner is the address who is allowed to make further changes to the oracle script.
  bytes owner = 4 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string fees = 5 [(gogoproto.moretags) = "json:\"transaction_fee\""];
  repeated string data_sources = 6;
  repeated string test_cases = 7;
}
// MsgCreateOracleScriptRes returns store result data.
message MsgCreateOracleScriptRes{
  string name = 1;
  string description = 2;
  string contract = 3;
  // Owner is the address who is allowed to make further changes to the oracle script.
  bytes owner = 4 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string fees = 5 [(gogoproto.moretags) = "json:\"transaction_fee\""];
  repeated string data_sources = 6;
  repeated string test_cases = 7;
}

// MsgEditOracleScript edit oracle script metadata onto Oraichain
message MsgEditOracleScript {
  string old_name = 1;
  string new_name = 2;
  string description = 3;
  string contract = 4;
  // Owner is the address who is allowed to make further changes to the oracle script.
  bytes owner = 5 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string fees = 6 [(gogoproto.moretags) = "json:\"transaction_fee\""];
  repeated string data_sources = 7;
  repeated string test_cases = 8;
}
// MsgEditOracleScriptRes returns edit result data.
message MsgEditOracleScriptRes{
  string name = 1;
  string description = 2;
  string contract = 3;
  // Owner is the address who is allowed to make further changes to the oracle script.
  bytes owner = 4 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string fees = 5 [(gogoproto.moretags) = "json:\"transaction_fee\""];
  repeated string data_sources = 6;
  repeated string test_cases = 7;
}
